--- a/_layouts/pages/default.html
+++ b/_layouts/pages/default.html
@@ -113,7 +113,7 @@
         flex: 1;
         background: white;
         border-radius: 1rem;
-        padding: 2rem;
+        padding: 0;
         overflow-y: auto;
         display: block;
         transition: all 0.3s ease;
