--- a/_layouts/pages/default.html
+++ b/_layouts/pages/default.html
@@ -232,6 +232,18 @@
         text-decoration: none !important;
       }
       
+      .works-panel .pub-item[data-type="news"] .pub-title {
+        font-weight: 400;
+      }
+      
+      .works-panel .pub-date {
+        font-size: 11px;
+        color: #999;
+        line-height: 1.2;
+        margin-bottom: 4px;
+        text-decoration: none !important;
+      }
+      
       .works-panel .pub-meta {
         font-size: 12px;
         color: #666;
@@ -350,6 +362,7 @@
               {% endif %}
               <div class="pub-content">
                 <div class="pub-header">
+                  <div class="pub-date">{{ news_item.date | date: '%b %Y' }}</div>
                   <div class="pub-title">{{ news_item.title }}</div>
                 </div>
               </div>
@@ -513,6 +526,7 @@
               </div>
               {% endif %}
               <div class="mobile-works-item-content">
+                <div class="mobile-works-item-date">{{ item.date | date: '%b %Y' }}</div>
                 <h3 class="mobile-works-item-title">{{ item.title }}</h3>
               </div>
             </a>
